name:                mc
version:             0.1.0.0
homepage:            https://github.com/satosystems/mc#readme
license:             BSD3
license-file:        LICENSE
author:              Satoshi Ogata
maintainer:          satosystems@gmail.com
copyright:           2017 Satoshi Ogata
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base
                     , async
                     , lifted-async
                     , parallel
                     , stm
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/satosystems/mc

